@@ -333,10 +333,42 @@ public class BasicDistributedZkTest extends AbstractFullDistribZkTestBase {
     testUpdateProcessorsRunOnlyOnce("distrib-dup-test-chain-implicit");
 
     testStopAndStartCoresInOneInstance();
+    testFailedCoreCreateCleansUp();
     // Thread.sleep(10000000000L);
     if (DEBUG) {
       super.printLayout();
     }
+  }
+  
+  private void testFailedCoreCreateCleansUp() throws Exception {
+    Create createCmd = new Create();
+    createCmd.setCoreName("core1");
+    createCmd.setCollection("the_core_collection");
+    String coredataDir = dataDir.getAbsolutePath() + File.separator
+        + System.currentTimeMillis() + "the_core_collection";
+    createCmd.setDataDir(coredataDir);
+    createCmd.setNumShards(1);
+    createCmd.setSchemaName("nonexistent_schema.xml");
+    
+    String url = getBaseUrl(clients.get(0));
+    final HttpSolrServer server = new HttpSolrServer(url);
+    try {
+      server.request(createCmd);
+      fail("Expected SolrCore create to fail");
+    } catch (Exception e) {
+      
+    }
+    
+    long timeout = System.currentTimeMillis() + 15000;
+    while (cloudClient.getZkStateReader().getZkClient().exists("/collections/the_core_collection", true)) {
+      if (timeout <= System.currentTimeMillis()) {
+        fail(cloudClient.getZkStateReader().getZkClient().getChildren("/collections", null, true).toString() + " Collection zk node still exists");
+      }
+      Thread.sleep(100);
+    }
+    
+    
+    assertFalse("Collection zk node still exists", cloudClient.getZkStateReader().getZkClient().exists("/collections/the_core_collection", true));
   }
   
   private void testShardParamVariations() throws Exception {
